[package]
name = "byte_messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
anyhow = "1.0"